add ADMIN role and JWT extended